<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HolaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/LblSaludar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo"
            android:textColor="@color/rojo"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:hint="@string/tunombre"
            android:inputType="text"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnSaludo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pulsar"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/colorBackground" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="@color/colorBackground" />

        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cerrar"
            android:textColor="@color/rojo"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>