<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityMoneda">

    <TextView
        android:id="@+id/lblTituloMoneda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/strTituloM"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/strCantidadM"
        android:inputType="numberDecimal"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTituloMoneda" />

    <Spinner
        android:id="@+id/spnMonedas"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:padding="5sp"
        app:layout_constraintEnd_toEndOf="@+id/txtCantidad"
        app:layout_constraintStart_toStartOf="@+id/txtCantidad"
        app:layout_constraintTop_toBottomOf="@+id/txtCantidad" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/strResultadoM"
        android:textAlignment="center"
        android:textColor="@color/rojo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnMonedas" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResultado">

        <Button
            android:id="@+id/btnConvertir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strBtnConvertir"
            app:backgroundTint="@color/colorBackground" />

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/btnLimpiar"
            app:backgroundTint="@color/colorBackground" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/menu_salir"
            app:backgroundTint="@color/colorBackground" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>